# LungPhaseDetection

./: .dockerignore  .gitignore  Dockerfile  README.md  analyze.py  docker-compose.gpu.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: deploy-reports.yml
core/: __init__.py  io_utils.py  model.py  reporting.py  waveform.py
docs/: deployment_and_productization.md
dvf_qa/: __init__.py  amsterdam_shroud.py  cli.py  cycle_pairing.py  dirlab.py  drr.py  dynamic_xray.py  image_io.py  jacobian.py  metrics.py  pipeline_report.py  report.py  synthetic_dynamic.py  warp.py
outputs/dirlab_demo/: index.html  summary.json
outputs/dirlab_demo/case1/: metrics.json  report.html
outputs/dirlab_demo/case10/: metrics.json  report.html
outputs/dirlab_demo/case2/: metrics.json  report.html
outputs/dirlab_demo/case3/: metrics.json  report.html
outputs/dirlab_demo/case4/: metrics.json  report.html
outputs/dirlab_demo/case5/: metrics.json  report.html
outputs/dirlab_lateral_variants/: comparison.json  index.html
outputs/tcia_4d_lung_demo/: metrics.json  report.html
outputs/tcia_4d_lung_demo_full/: metrics.json  report.html
scripts/: anonymize_dicom.py  build_pages.py  dirlab_demo.py  dirlab_lateral_variants.py  dynamic_xray_phase_qa.py  notion_publish.py  notion_publish_summary.py  slack_notify.py  tcia_4d_lung_demo.py
tests/: test_amsterdam_shroud.py  test_cycle_pairing.py  test_drr.py  test_dynamic_xray.py  test_io.py  test_jacobian.py  test_model.py  test_pipeline_end_to_end.py  test_synthetic_dynamic.py  test_waveform.py
(+58 files in other folders)
