[project]
name = "dvf-qa"
version = "0.1.0"
description = "QA tools for 3D CT/DVF predictions, including Jacobian and DRR reprojection checks."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "imageio>=2.31",
  "SimpleITK>=2.3",
  "torch>=2.0",
  "torchxrayvision>=1.0",
  "torchio>=0.20",
  "diffdrr>=0.6",
  "datasets>=2.0",
]

[project.scripts]
dvf-qa = "dvf_qa.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
